Fixed horizontal stretching of some pages with very large screens

--- a/assets/styles/desktop/index.scss
+++ b/assets/styles/desktop/index.scss
@@ -132,6 +132,7 @@ main > a
 	margin: auto;
 	display: flex;
 	position: absolute;
+	max-width: 1440px;
 	transform: translate(-50%, -50%);
 	box-shadow: none;
 	align-items: center;
